--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -54,7 +54,7 @@
 }
 
 .infoTitle {
-  font-family: Inter, sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
@@ -64,7 +64,7 @@
 }
 
 .description {
-  font-family: Inter, sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 21px;
@@ -81,7 +81,7 @@
 .linkWrapper {
   display: flex;
   gap: 10px;
-  font-family: Inter, sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
