--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -4,7 +4,8 @@
     flex-wrap: wrap;
     gap: 20px;
     max-width: 1195px;    
-    width: 100%;   
+    width: 100%;  
+    max-height: 3131px; 
 }
 
 .item {
