--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -1,6 +1,6 @@
 .navContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   margin-left: auto;
   padding-top: 80px;
