--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -6,39 +6,45 @@ a {
     display: inline-block;
 }
 
+.paginationWrapper{
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .pagination {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 32px;
-    width: 270.43px;
-    height: 56px;
+    gap: 24px;
+    max-width: 500px;
+    padding: 24px 32px;
     margin-top: 0;
     margin-bottom: 0;
-    padding-left: 0;
     list-style: none;
     background: #D9D9D9;
     border-radius: 34px;
 }
 
-.numberWrapper{
+.numberWrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 115px;
 }
 
 .pageItem {
     font-family: Inter, sans-serif;
     font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 24px;
-    color: #000;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
 }
 
 .pageItem.active {
     font-weight: 900;
+}
+
+.numberWrapper .pageItem:not(:last-child){
+    margin-right: 6px;
 }
 
 .pageLink {
