--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -88,6 +88,7 @@ text-transform: capitalize;
   width: 24px;
   height: 24px;
   border: 2px solid #ccc;
+  background: #D9D9D9;
   border-radius: 50%;
   margin-left: 10px;
   position: relative;
@@ -95,13 +96,11 @@ text-transform: capitalize;
 
 .customRadio:hover .radioMark {
   border-color: #939393;
-
-  ;
-  /* Змінюємо колір при наведенні */
+  background:#939393;
 }
 
 .hiddenRadio:checked+.radioMark {
-  background-color: #939393;
+  background: #939393;
   border-color: #939393;
 }
 
