--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ li {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Inter, sans-serif;
   line-height: 1.6;
   padding: 0 160px;
 }
