feat: create our-animals block, fix selectTotalElements, update slice

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,3 +1,8 @@
+.heroWrapper{
+    margin-bottom: 80px;
+    padding: 192px 0 205px 158px;
+}
+
 .heroTitle{
     font-family: Inter, sans-serif;
     font-size: 72px;
