--- a/src/components/OurAnimals/OurAnimals.module.css
+++ b/src/components/OurAnimals/OurAnimals.module.css
@@ -12,18 +12,16 @@
 }
 
 .animalsBlock{
-    margin-bottom: 64px;
-}
-
-.container {
-    display: flex;
+    display: flex;    
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
     max-width: 1600px;    
     width: 100%;  
-
-    /* max-height: 3131px; */ 
+    margin-bottom: 64px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .item {
