--- a/src/components/OurAnimals/OurAnimals.module.css
+++ b/src/components/OurAnimals/OurAnimals.module.css
@@ -19,7 +19,7 @@
     gap: 20px;
     max-width: 1600px;    
     width: 100%;  
-    margin-bottom: 64px;
+    margin-bottom: 44px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -31,6 +31,7 @@
 
 .morebutton{
     border-radius: 32px;
+    border: none;
     width: 1600px;
     padding: 18px 746px;
     background: #D9D9D9;
