--- a/src/components/Card/ShelterCard/Card.module.css
+++ b/src/components/Card/ShelterCard/Card.module.css
@@ -1,30 +1,111 @@
 .cardWrapper {
-    width: 385px;
-    height: 575px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 20px;
-    background: #f4f2f0;
-    border-radius: 24px;
-    box-sizing: border-box;
-  }
-  
-  .imgWrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0;
-    gap: 10px;
-    width: 337px;
-    height: 300px;  
-  }
-  
-  .imgWrapper img {
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-    border-radius: 16px;
-  }
+  position: relative;
+  width: 385px;
+  height: 554px;
+  padding: 186px 0 24px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  flex-basis: auto;
+  background: #F0F1F4;
+  border-radius: 16px;
+  box-sizing: border-box;
+  border: 0.5px solid #D9D9D9;
+  overflow-x: hidden;
+  max-height: 554px;
+  transition: box-shadow .3s;
+}
+
+.cardWrapper:hover {
+  box-shadow: 5px 5px 10px #c7c7c7,
+  5px 5px 10px #f9f9f9;
+}
+
+.imgWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 385px;
+  height: 187px;
+  border: 0.5px 0.5px 0 0.5px solid #D9D9D9;
+  background: #D9D9D9;
+}
+
+.imgWrapper img {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  border-radius: 16px 16px 0 0;
+}
+
+.cardLink{
+  display: block; 
+  height: 502px; 
+  overflow-y: hidden;
+}
+
+.contentWrapper {
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  overflow-y: auto;
+}
+
+.lacation {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20.57px;
+  color: #000;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.locationIcon {
+  width: 14px;
+  height: 18px;
+}
+
+.title {
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 31.47px;
+  color: #000;
+}
+
+.statistics {
+  display: flex;
+  gap: 16px;
+}
+
+.description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25.2px;
+  color: #000;
+}
+
+.socialBlock {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 34px;
+  padding-left: 20px;
+}
+
+.goSocial {
+  width: 45px;
+  height: 45px;
+  fill: #000;
+  transition: fill 0.3s;
+}
+
+.goSocial:hover {
+  fill: #0056b3;
+}
