--- a/src/components/SocialLinks/SocialLinks.module.css
+++ b/src/components/SocialLinks/SocialLinks.module.css
@@ -4,6 +4,10 @@
   gap: 20px;
 }
 
+.container.card{
+  gap: 12px;
+}
+
 .link {
   display: flex;
   flex-direction: row;
@@ -15,6 +19,11 @@
   height: 48px;
   fill: #000;
   transition: fill 0.3s;
+}
+
+.icon.card{
+  width: 32px;
+  height: 32px;
 }
 
 .link:hover .icon {
