--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,11 @@ select {
   font-family: inherit;
   font-size: inherit;
 }
+
+.sectionTitle {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58.09px;
+  text-align: center;
+  margin-bottom: 80px;
+}
