--- a/src/components/HomeComponents/Subscription/SubsriptForm/SubscriptForm.module.css
+++ b/src/components/HomeComponents/Subscription/SubsriptForm/SubscriptForm.module.css
@@ -7,10 +7,10 @@
 .input{
     padding: 24px 67px;
     width: 580px;
-border-radius: 24px;
-border: 1px solid #7F7E7C;
-color: #7F7E7C;
-
+    border-radius: 24px;
+    border: 1px solid #7F7E7C;
+    color: #7F7E7C;
+    outline: none;
 }
 
 .button{
@@ -18,10 +18,10 @@ color: #7F7E7C;
     padding: 18px 62px;
     border-radius: 24px;
     font-size: 18px;
-font-weight: 600;
-line-height: 25px;
-color: #D9D9D9;
-background: #000C;
+    font-weight: 600;
+    line-height: 25px;
+    color: #D9D9D9;
+    background: #000C;
 }
 
 .thanking{
@@ -34,8 +34,7 @@ background: #000C;
     font-weight: 600;
     line-height: 25px;
     color: #fff;
-    background-color: #696969;
-    
+    background-color: #696969;    
 }
 
 .hidden{
