--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ li {
 }
 
 body {
-  font-family: Inter, sans-serif;
+  font-family: Inter, serif;
   line-height: 1.6;
   padding: 0 160px;
   max-width: 1920px;
