--- a/src/components/HomeComponents/Subscription/SubsriptForm/SubscriptForm.module.css
+++ b/src/components/HomeComponents/Subscription/SubsriptForm/SubscriptForm.module.css
@@ -1,19 +1,28 @@
-.form{
+.form {
     display: flex;
     justify-content: start;
     gap: 24px;
 }
 
-.input{
+.input {
     padding: 24px 67px;
     width: 580px;
     border-radius: 24px;
     border: 1px solid #7F7E7C;
-    color: #7F7E7C;
+    color: #7F7E7C;    
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.input:focus{    
+    color: #434342 !important;
+    border: 1px solid #6d6c6c;
+    background-color: inherit !important;
     outline: none;
 }
 
-.button{
+.button {
     width: 224px;
     padding: 18px 62px;
     border-radius: 24px;
@@ -22,9 +31,14 @@
     line-height: 25px;
     color: #D9D9D9;
     background: #000C;
+    transition: background 0.3s;
 }
 
-.thanking{
+.button:hover {
+    background: #565656;
+}
+
+.thanking {
     position: absolute;
     top: 0;
     right: 0;
@@ -34,10 +48,10 @@
     font-weight: 600;
     line-height: 25px;
     color: #fff;
-    background-color: #696969;    
+    background-color: #696969;
 }
 
-.hidden{
+.hidden {
     animation: slidein 3s forwards;
 }
 
