--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   margin-left: auto;
   padding-top: 80px;
-  margin-bottom: 20px;
-  gap: 200px;
+  margin-bottom: 24px;
+  gap: 189px;
 }
 
 .logoContainer {
@@ -47,10 +47,16 @@
   align-items: center;
   justify-content: center;
   width: auto;
-  padding: 20px 40px;
+  padding: 18px 43px;
   gap: 56px;
   border: 1px solid #d9d9d9;
   border-radius: 40px;
+}
+
+.authLinks{
+  display: flex;
+  gap: 53px;
+  align-items: center;
 }
 
 .loginContainer {
@@ -78,6 +84,15 @@
   width: 24px;
   height: 20px;
   flex-shrink: 0;
+}
+
+.forumLink:hover{
+  color: #007bff;
+}
+
+.forumIcon{
+  width: 48px;
+  height: 48px;
 }
 
 .loginBtn {
