--- a/src/components/SideBar/DropDown/DropDown.module.css
+++ b/src/components/SideBar/DropDown/DropDown.module.css
@@ -10,9 +10,8 @@
     width: 335px;
     height: 80px;
     padding: 25px 22px 21px 44px;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    gap: 128px;
     border-radius: 34px;
     background: #d9d9d9;
     margin-bottom: 24.8px;  
