update slice, create SeletedAttributeFilter, fix header

--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   margin-left: auto;
   padding-top: 80px;
-  margin-bottom: 24px;
-  gap: 189px;
+  padding-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .logoContainer {
