--- a/src/components/SideBar/DropDown/DropDown.module.css
+++ b/src/components/SideBar/DropDown/DropDown.module.css
@@ -2,6 +2,7 @@
   width: 335px;
   border-radius: 34px;
   background: var(--background-of-fields-icons, #eee);
+  margin-bottom: 64px;
 }
 
 .categoriesContainer {
@@ -34,6 +35,7 @@
   display: flex;
   gap: 24px;
   flex-direction: column;
+  padding-top: 30px;
 }
 
 .optionsItem {
@@ -101,6 +103,11 @@
   border-color: #939393;
 }
 
+.hiddenRadio:not(:checked) + .radioMark {
+  border: 2px solid #ccc;
+  background: #D9D9D9;
+}
+
 .hiddenRadio:checked+.radioMark::after {
   content: ' ';
   position: absolute;
@@ -110,4 +117,8 @@
   height: 10px;
   border-radius: 50%;
   background-color: white;
+}
+
+.hiddenRadio:not(:checked) + .radioMark::after {
+  content: none;
 }
