--- a/src/components/AttributesFilter/AttributeDropDown/AttributeDropDown.module.css
+++ b/src/components/AttributesFilter/AttributeDropDown/AttributeDropDown.module.css
@@ -1,123 +1,190 @@
 .wrapper {
-    width: 335px;
-    border-radius: 34px;
-    background: var(--background-of-fields-icons, #eee);
-    margin-bottom: 24px;
-  }
-  
-  .categoriesContainer {
-    box-sizing: border-box;
-    display: inline-flex;
-    width: 335px;
-    height: 80px;
-    padding: 25px 22px 21px 44px;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 34px;
-    background: #d9d9d9;    
-  }
-  
-  .categoriesContainer.isOpen {
-    border-radius: 34px 34px 0 0;
-  }
-  
-  .category {
-    font-family: Inter, sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 24.2px;
-    text-align: left;
-    text-transform: capitalize;
-  }
-  
-  .optionsList {
-    display: flex;
-    gap: 24px;
-    flex-direction: column;
-    padding-top: 30px;
-  }
-  
-  .optionsItem {
-    display: flex;
-    gap: 34px;
-    padding: 5.5px 13px 5.5px 44px;
-  }
-  
-  .itemWrapper {
-    display: flex;
-    justify-content: space-between;
-    flex: 1;
-    font-family: Inter, sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24.2px;
-    text-align: left;
-    text-transform: capitalize;
-  }
-  
-  .itemWrapper span {
-    font-weight: 200;
-  }
-  
-  .dropDown {
-    display: flex;
-    gap: 190px;
-    padding: 24px 44px;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    border-radius: 34px;
-    background: var(--background-of-fields-icons, #eee);
-  }
-  
-  .hiddenRadio {
-    display: none;
-  }
-  
-  .customRadio {
-    display: flex;
-    gap: 190px;
-    align-items: center;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
-  
-  .radioMark {
-    width: 24px;
-    height: 24px;
-    border: 2px solid #ccc;
-    background: #D9D9D9;
-    border-radius: 50%;
-    margin-left: 10px;
-    position: relative;
-  }
-  
-  .customRadio:hover .radioMark {
-    border-color: #939393;
-    background: #939393;
-  }
-  
-  .hiddenRadio:checked+.radioMark {
-    background: #939393;
-    border-color: #939393;
-  }
+  position: relative;
+    z-index: 2;
+  width: 335px;
+  max-width: 518px;
+  border-radius: 34px;
+  background: var(--background-of-fields-icons, #eee);
+  margin-bottom: 24px;
+}
 
-  .hiddenRadio:not(:checked) + .radioMark {
-    border: 2px solid #ccc;
-    background: #D9D9D9;
-  }
-  
-  .hiddenRadio:checked+.radioMark::after {
-    content: ' ';
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: white;
-  }
+.categoriesContainer {
+  box-sizing: border-box;
+  display: inline-flex;
+  width: 335px;
+  height: 80px;
+  padding: 25px 22px 21px 44px;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 34px;
+  background: #d9d9d9;
+}
 
-  .hiddenRadio:not(:checked) + .radioMark::after {
-    content: none;
-  }
+.categoriesContainer.isOpen {
+  border-radius: 34px 34px 0 0;
+}
+
+.breedCategoriesContainer{
+  box-sizing: border-box;
+  display: inline-flex;
+  gap: 32px;
+  width: 335px;
+  height: 80px;
+  padding: 25px 22px 24px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 34px;
+  background: #d9d9d9;
+}
+
+.breedCategoriesContainer.isOpenBreed {
+  width: 518px;
+  height: 151px;
+  border-radius: 34px 34px 0 0;
+  transition: all linear .3s;
+}
+
+.titleContent {
+  max-width: 417px;
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.searchContainer {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.searchIcon {
+  position: absolute;
+  top: 10px;
+  left: 32px;
+}
+
+.icon {
+  width: 17px;
+  height: 21px;
+}
+
+.input {
+  padding: 8px 0 8px 70px;
+  background: #EEE;
+  border-radius: 24px;
+  width: 100%;
+  font-size: 20px;
+  border: none;
+  outline: none;
+}
+
+.category {
+  font-family: Inter, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24.2px;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.breedListWrapper{
+  width: 518px;
+  max-height: 583px;
+  height: 100%;
+  overflow-y: auto;
+  background: #EEE;
+}
+
+.optionsList {
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
+  padding-top: 30px;
+}
+
+.optionsItem {
+  display: flex;
+  gap: 34px;
+  padding: 5.5px 13px 5.5px 44px;
+}
+
+.itemWrapper {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  font-family: Inter, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24.2px;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.itemWrapper span {
+  font-weight: 200;
+}
+
+.dropDown {
+  display: flex;
+  gap: 190px;
+  padding: 24px 44px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  border-radius: 34px;
+  background: var(--background-of-fields-icons, #eee);
+}
+
+.hiddenRadio {
+  display: none;
+}
+
+.customRadio {
+  display: flex;
+  gap: 190px;
+  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+.radioMark {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #ccc;
+  background: #D9D9D9;
+  border-radius: 50%;
+  margin-left: 10px;
+  position: relative;
+}
+
+.customRadio:hover .radioMark {
+  border-color: #939393;
+  background: #939393;
+}
+
+.hiddenRadio:checked+.radioMark {
+  background: #939393;
+  border-color: #939393;
+}
+
+.hiddenRadio:not(:checked)+.radioMark {
+  border: 2px solid #ccc;
+  background: #D9D9D9;
+}
+
+.hiddenRadio:checked+.radioMark::after {
+  content: ' ';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.hiddenRadio:not(:checked)+.radioMark::after {
+  content: none;
+}
