--- a/src/components/AuthModal/AuthModal.module.css
+++ b/src/components/AuthModal/AuthModal.module.css
@@ -36,7 +36,7 @@
     border: 1px solid #000;
     border-radius: 8px;
     background: #EEE;
-    padding: 20px 0 20px 16px;
+    padding: 20px 20px 20px 16px;
     font-family: Poppins, sans-serif;
     font-weight: 400;
     font-size: 16px;
