--- a/src/pages/AboutUsPage/styles.module.css
+++ b/src/pages/AboutUsPage/styles.module.css
@@ -1,6 +1,41 @@
 .wrapper{
     width: 1200px;
     height: 100%;
-    background-color: aqua;
+    
 
+}
+
+.text{
+        font-family: 'Hind Siliguri', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 30px;
+        color: #000;
+        margin-bottom: 35px;
+}
+
+.title{
+        font-family: 'Hind Siliguri', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 30px;
+        color: #000;
+        margin-bottom: 20px;
+}
+
+.section{
+    display: flex;
+    gap: 54px;
+    margin-bottom: 48px;
+    padding: 53px 20px;
+    background: #C5BFBF;
+     border-radius: 5px;
+}
+
+.image{
+         width: 716px;
+        height: 493px;
+        border-radius: 20px;
 }
