--- a/src/pages/AboutUsPage/styles.module.css
+++ b/src/pages/AboutUsPage/styles.module.css
@@ -1,41 +1,76 @@
-.wrapper{
-    width: 1200px;
-    height: 100%;
-    
-
+.wrapper {
+  width: 1600px;
+  height: 100%;
 }
 
-.text{
-        font-family: 'Hind Siliguri', sans-serif;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 30px;
-        color: #000;
-        margin-bottom: 35px;
+.preview {
+  font-family: 'Hind Siliguri', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  color: #000;
+  margin: 0 auto 18px;
+  width: 1176px;
 }
 
-.title{
-        font-family: 'Hind Siliguri', sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 36px;
-        line-height: 30px;
-        color: #000;
-        margin-bottom: 20px;
+.maintitle {
+  font-family: 'Hind Siliguri', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 72px;
+  line-height: 50px;
+  color: #000;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
-.section{
-    display: flex;
-    gap: 54px;
-    margin-bottom: 48px;
-    padding: 53px 20px;
-    background: #C5BFBF;
-     border-radius: 5px;
+.hero {
+  background-color: #c5bfbf;
+  width: 100%;
+  height: 577px;
+  margin-bottom: 48px;
 }
 
-.image{
-         width: 716px;
-        height: 493px;
-        border-radius: 20px;
+.text {
+  font-family: 'Hind Siliguri', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  color: #000;
+  margin-bottom: 35px;
+}
+
+.title {
+  font-family: 'Hind Siliguri', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 30px;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.section {
+  display: flex;
+  gap: 54px;
+  margin-bottom: 48px;
+  padding: 53px 20px;
+  background: #c5bfbf;
+  border-radius: 5px;
+  width: 1600px;
+}
+
+.image {
+  width: 716px;
+  height: 493px;
+  border-radius: 20px;
+  flex-shrink: 0;
+}
+
+.textBlock {
+  width: 790px;
+  flex-shrink: 0;
 }
